--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -1,3 +1,16 @@
-[users]
-xiaoyan=123456
-xiaoming=112233
+[main]
+#配置自定义Realm
+myrealm=com.lih.realm.MyRealm
+
+#配置凭证匹配器
+credentialsMatcher=org.apache.shiro.authc.credential.HashedCredentialsMatcher
+#设置散列次数
+    credentialsMatcher.hashIterations=1024
+    #设置加密算法
+    credentialsMatcher.hashAlgorithmName=MD5
+
+#将凭证匹配器交给自定义Realm
+myrealm.credentialsMatcher=$credentialsMatcher
+
+#将自定义realm交给凭证匹配器
+securityManager.realms=$myrealm
