--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,12 @@ spring:
     view:
       prefix: /
       suffix: .jsp
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8
+    username: root
+    password: root
+mybatis:
+  type-aliases-package: com.lih.entity
+  mapper-locations: classpath:com/lih/mapper/*.xml
